// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clearAdjacentTile should create a CLEAR_ADJACENT_TILE action 1`] = `
Object {
  "tile": Object {
    "adjacentMineCount": 1,
    "column": 1,
    "index": 5,
    "isCleared": false,
    "isFlagged": false,
    "isMine": false,
    "row": 1,
  },
  "type": "CLEAR_TILE",
}
`;

exports[`clearTile should create a CLEAR_TILE action 1`] = `
Object {
  "tile": Object {
    "adjacentMineCount": 0,
    "column": 0,
    "index": 4,
    "isCleared": false,
    "isFlagged": false,
    "isMine": false,
    "row": 1,
  },
  "type": "CLEAR_TILE",
}
`;

exports[`toggleFlagTile should create a TOGGLE_FLAG_TILE action 1`] = `
Object {
  "tile": Object {
    "adjacentMineCount": 0,
    "column": 0,
    "index": 4,
    "isCleared": false,
    "isFlagged": false,
    "isMine": false,
    "row": 1,
  },
  "type": "TOGGLE_FLAG_TILE",
}
`;
